Prueba de imagenes para page

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Medicina Humana</a></li>
-                        <li><a class="dropdown-item" href="#">Medicina Veterinaria</a></li>
-                        <li><a class="dropdown-item " href="#">Odontología</a></li>
-                        <li><a class="dropdown-item" href="#">Simulación</a></li>
-                        <li><a class="dropdown-item" href="#">Soporte técnico</a></li>
+                        <li><a class="dropdown-item" href="./pages/humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="./pages/veterinario.html">Medicina Veterinaria</a></li>
+                        <li><a class="dropdown-item " href="./pages/odontologia.html">Odontología</a></li>
+                        <li><a class="dropdown-item" href="./pages/simulacion.html">Simulación</a></li>
+                        <li><a class="dropdown-item" href="./pages/soporte.html">Soporte técnico</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Contacto</a></li>
+                        <li><a class="dropdown-item" href="#contacto__link">Contacto</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -226,6 +226,7 @@
     </section>
     <h2 class="titulos">Noticias</h2>
     <!--NOTICIAS-->
+    <a name="nosticias__link" id="noticias__link"></a>
     <section class="post__list">
         <div class="content row-lg">
             <article class="post col-lg">
