--- a/pages/img__vet.html
+++ b/pages/img__vet.html
@@ -37,28 +37,20 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html"><img src="../img/homeicon.png" alt=""></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#nosotros__link">NOSOTROS</a>
-                    </li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Medicina Humana</a></li>
-                        <li><a class="dropdown-item" href="#">Medicina Veterinaria</a></li>
-                        <li><a class="dropdown-item " href="#">Odontología</a></li>
-                        <li><a class="dropdown-item" href="#">Simulación</a></li>
-                        <li><a class="dropdown-item" href="#">Soporte técnico</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Contacto</a></li>
+                        <li><a class="dropdown-item" href="./humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="./veterinario.html">Medicina Veterinaria</a></li>
+                        <li><a class="dropdown-item" href="./odontologia.html">Odontología</a></li>
+                        <li><a class="dropdown-item" href="./simulacion.html">Simulación</a></li>
+                        <li><a class="dropdown-item" href="./soporte.html">Soporte técnico</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">NOTICIAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACTO</a>
+                        <a class="nav-link" href="#contacto__link">CONTACTO</a>
                     </li>
                     </ul>
                 </div>
@@ -79,13 +71,19 @@
     <Section class="caja__botones">
         <div class="row">
             <div class="col-lg btn1">
+                <a name="ecografia__vet" href="#ecografia__vet" style="text-decoration: none">
                 <button class="boton dos"><span>ECOGRAFIA</span></button>
+                </a>
             </div>
             <div class="col-lg">
+                <a name="endoscopia__vet" href="#endoscopia__vet" style="text-decoration: none">
                 <button class="boton dos"><span>Endoscopia</span></button>
+                </a>
             </div>
             <div class="col-lg">
+                <a name="resonancia__vet" href="#resonancia__vet" style="text-decoration: none">
                 <button class="boton dos"><span>Resonancia</span></button>
+                </a>
             </div>
             <div class="col-lg">
                 <button class="boton dos"><span>Tomografia</span></button>
@@ -98,6 +96,7 @@
     <!--PRODUCTOS ECOGRAFIA VET-->
     <section>
         <div class="row" id="product1">
+            <a class="nav-link" href="#ecografia__vet"></a>
             <h2 class="titulos">ECOGRAFIA</h2>
             <p>Equipos de ultrasonido veterinario</p>
             <div class="pro-container col-lg">
@@ -239,6 +238,7 @@
         <!--PRODUCTOS ENDOSCOPIA VET-->
         <section>
             <div class="row" id="product1">
+                <a class="endos" href="#endoscopia__vet"></a>
                 <h2 class="titulos">ENDOSCOPIA</h2>
                 <p>Equipos especializados para endoscopia veterinaria</p>
                 <div class="pro-container col-lg">
@@ -297,8 +297,10 @@
         <!--PRODUCTOS CT MRI RX VET-->
         <section>
             <div class="row" id="product1">
+                <a class="nav-link" href="#resonancia__vet">
                 <h2 class="titulos">Tomografia | Resonancia | Rayos X</h2>
                 <p>Equipos avanzados para diagnostico veterinario</p>
+                </a>
                 <div class="pro-container col-lg">
                     <div class="pro">
                         <img src="/img/VETproductos/Anatom vet.png" alt="">
