--- a/pages/simulacion.html
+++ b/pages/simulacion.html
@@ -31,34 +31,22 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html"><img src="../img/homeicon.png" alt=""></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#nosotros__link">NOSOTROS</a>
-                    </li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Medicina Humana</a></li>
-                        <li><a class="dropdown-item" href="#">Medicina Veterinaria</a></li>
-                        <li><a class="dropdown-item " href="#">Odontología</a></li>
-                        <li><a class="dropdown-item" href="#">Simulación</a></li>
-                        <li><a class="dropdown-item" href="#">Soporte técnico</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Contacto</a></li>
+                        <li><a class="dropdown-item" href="./humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="./veterinario.html">Medicina Veterinaria</a></li>
+                        <li><a class="dropdown-item" href="./odontologia.html">Odontología</a></li>
+                        <li><a class="dropdown-item" href="./simulacion.html">Simulación</a></li>
+                        <li><a class="dropdown-item" href="./soporte.html">Soporte técnico</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">NOTICIAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACTO</a>
+                        <a class="nav-link" href="#contacto__link">CONTACTO</a>
                     </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Que deseas buscar?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
                 </div>
                 </div>
             </nav>
