Prueba de imagenes para 3

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container__card">
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(/img/Sonoeye1.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/Sonoeye1.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Ecógrafos de mano, Doppler color, Modo M y Doppler pulsado.
