Prueba de imagenes para 4

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(/img/ankeCT.jpeg);">
+                    <div class="card__front" style="background-image: url(../WebtaichiSASS/img/ankeCT.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Equipo de tomografia computarizada (TAC) 
