--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(../WebtaichiSASS/img/ankeCT.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/ankeCT.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Equipo de tomografia computarizada (TAC) 
@@ -188,7 +188,7 @@
             </div>
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(/img/endoscopioportatil.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/endoscopioportatil.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Equipo de endoscopia veterinaria portatil
@@ -206,7 +206,7 @@
             </div>
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(/img/zvent2.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/zvent2.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Ventilador de transporte
