Prueba de imagenes para banner vet1

--- a/pages/veterinario.html
+++ b/pages/veterinario.html
@@ -59,7 +59,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="/img/bannerVet.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid" src="../img/bannerVet.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Soluciones veterinarias al servicio de nuestros mejores amigos</p>
                     </div> 
                     </div>
