Prueba de imagenes restauradas

--- a/pages/img__vet.html
+++ b/pages/img__vet.html
@@ -101,7 +101,7 @@
             <p>Equipos de ultrasonido veterinario</p>
             <div class="pro-container col-lg">
                 <div class="pro">
-                    <img src="/img/VETproductos/SonoeyeVet.jpeg" alt="">
+                    <img src="../img/VETproductos/SonoeyeVet.jpeg" alt="">
                     <div class="des">
                         <span>SonoEye Vet</span>
                         <h5>CHISON</h5>
@@ -117,7 +117,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/Eco1Chison.jpeg" alt="">
+                    <img src="../img/VETproductos/Eco1Chison.jpeg" alt="">
                     <div class="des">
                         <span>ECO 1 VET</span>
                         <h5>CHISON</h5>
@@ -134,7 +134,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/chison_eco2_pag.jpeg" alt="">
+                    <img src="../img/VETproductos/chison_eco2_pag.jpeg" alt="">
                     <div class="des">
                         <span>ECO 2 VET</span>
                         <h5>CHISON</h5>
@@ -150,7 +150,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/Chison-Eco-3-Expert-Color.png" alt="">
+                    <img src="../img/VETproductos/Chison-Eco-3-Expert-Color.png" alt="">
                     <div class="des">
                         <span>ECO 3 EXPERT VET</span>
                         <h5>CHISON</h5>
@@ -166,7 +166,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/ebit-30.png" alt="">
+                    <img src="../img/VETproductos/ebit-30.png" alt="">
                     <div class="des">
                         <span>Ebit 30 VET</span>
                         <h5>CHISON</h5>
@@ -182,7 +182,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/hs-102v.jpeg" alt="">
+                    <img src="../img/VETproductos/hs-102v.jpeg" alt="">
                     <div class="des">
                         <span>HS-120V</span>
                         <h5>Honda Electronics</h5>
@@ -198,7 +198,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/hv-1600V.jpeg" alt="">
+                    <img src="../img/VETproductos/hv-1600V.jpeg" alt="">
                     <div class="des">
                         <span>HS-1600V</span>
                         <h5>Honda Electronics</h5>
@@ -214,7 +214,7 @@
                     <a href="#"><i class="fal fa-shopping-cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="/img/VETproductos/hs-2200 vet.jpeg" alt="">
+                    <img src="../img/VETproductos/hs-2200 vet.jpeg" alt="">
                     <div class="des">
                         <span>HS-2200 Vet</span>
                         <h5>Honda Electronics</h5>
@@ -243,7 +243,7 @@
                 <p>Equipos especializados para endoscopia veterinaria</p>
                 <div class="pro-container col-lg">
                     <div class="pro">
-                        <img src="/img/VETproductos/EC series.jpeg" alt="">
+                        <img src="../img/VETproductos/EC series.jpeg" alt="">
                         <div class="des">
                             <span>EC-Series Vet</span>
                             <h5>TK-VETKIT</h5>
@@ -259,7 +259,7 @@
                         <a href="#"><i class="fal fa-shopping-cart"></i></a>
                     </div>
                     <div class="pro">
-                        <img src="/img/VETproductos/UE series.jpeg" alt="">
+                        <img src="../img/VETproductos/UE series.jpeg" alt="">
                         <div class="des">
                             <span>UE-USB VET</span>
                             <h5>TK-VETKIT</h5>
@@ -276,7 +276,7 @@
                         <a href="#"><i class="fal fa-shopping-cart"></i></a>
                     </div>
                     <div class="pro">
-                        <img src="/img/VETproductos/GU serie.jpeg" alt="">
+                        <img src="../img/VETproductos/GU serie.jpeg" alt="">
                         <div class="des">
                             <span>GU-Serie Gastroscopio</span>
                             <h5>TK-VETKIT</h5>
@@ -303,7 +303,7 @@
                 </a>
                 <div class="pro-container col-lg">
                     <div class="pro">
-                        <img src="/img/VETproductos/Anatom vet.png" alt="">
+                        <img src="../img/VETproductos/Anatom vet.png" alt="">
                         <div class="des">
                             <span>Anatom Fit 32/64 FIT </span>
                             <h5>ANKE</h5>
@@ -319,7 +319,7 @@
                         <a href="#"><i class="fal fa-shopping-cart"></i></a>
                     </div>
                     <div class="pro">
-                        <img src="/img/VETproductos/OpenMark vet.png" alt="">
+                        <img src="../img/VETproductos/OpenMark vet.png" alt="">
                         <div class="des">
                             <span>OPENMARK VET</span>
                             <h5>ANKE</h5>
@@ -339,7 +339,7 @@
                         <a href="#"><i class="fal fa-shopping-cart"></i></a>
                     </div>
                     <div class="pro">
-                        <img src="/img/VETproductos/VET-20BT_PG.jpeg" alt="">
+                        <img src="../img/VETproductos/VET-20BT_PG.jpeg" alt="">
                         <div class="des">
                             <span>RAYOS X VET 20-BT</span>
                             <h5>POSKOM</h5>
