--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </section>
     <header>
         <!--BARRA DE NAVEGACION-->
-        <div class="barra_nav ">
-            <nav class="navbar navbar-expand-lg">
+        <div class="barra_nav">
+            <nav class="navbar navbar-expand-lg navbar-right">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/logotaichi.png" width="200px" alt=""></a>
                     <a class="nav-link active" aria-current="page" href="index.html"><img src="./img/homeicon.png" alt=""></a>
@@ -31,7 +31,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
                         <a class="nav-link" href="#nosotros__link">NOSOTROS</a>
                     </li>
