Incluyendo pagina de producto y de contacto

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="body__card__back">
                             <h1>SonoEye</h1>
                             <p>CHISON SonoEye puede ayudar a proporcionar una atención de alta calidad al paciente en cualquier lugar. Cuenta con un diseño adaptable que pasa de la tablet al teléfono móvil, lo que aumenta la portabilidad, y hace posible trabajar junto a los médicos de paciente a paciente todo el tiempo.</p>
-                            <input type="button"    value="Leer mas">
+                            <a href="./pages/productos/1vet.html"><input type="button" value="Leer mas"></a>
                         </div>
                     </div>
                 </div>
