--- a/pages/img__vet.html
+++ b/pages/img__vet.html
@@ -100,7 +100,7 @@
             <h2 class="titulos">ECOGRAFIA</h2>
             <p>Equipos de ultrasonido veterinario</p>
             <div class="pro-container col-lg">
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='productos/1vet.html';">
                     <img src="../img/VETproductos/SonoeyeVet.jpeg" alt="">
                     <div class="des">
                         <span>SonoEye Vet</span>
