--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taichi Holdings Colombia</title>
+    <meta name="description" content="Contacto, Nosotros, solicitud, equipos medicos, informacion, cotizaciones, servicio tecnico, biomedica">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -101,7 +102,7 @@
                     <p><img src="/img/llamada-telefonica.png" alt="">
                     +57 601-7559348</p>
                     <p><img src="/img/ubicacion.png" alt="">
-                        Cra. 15 No. 93A-62 OF: 304-305 Bogota - Colombia</p>
+                        Cra. 15 No. 93A-62 OF: 304-305 - Bogota - Colombia</p>
                     <p><img src="/img/email.png" alt="">
                         info@anabas.co.jp</p>
                 </div>
