--- a/pages/productos/1vet.html
+++ b/pages/productos/1vet.html
@@ -90,7 +90,7 @@
                 <h6>Inicio / SonoEye</h6>
                 <h4>Ecógrafos de bolsillo para medicina veterinaria </h4>
                 <h3>Contactanos para mas información</h3>
-                <button class="boton__general">Solicita tu cotización</button>
+                <a href="/pages/contacto.html"><button class="boton__general">Solicita tu cotización</button></a>
                 <h4>Detalles del producto</h4>
                 <span>El ecógrafo portátil Chison Sonoeye puede presumir de ser el ecógrafo de bolsillo más potente y con menos peso del mercado. El equipo SonoEye posee una excelente resolución y calidad de imágenes y presenta un diseño portátil, ergonómico y con tan solo 120 gramos de peso. Y todo ello sin renunciar a la potencia de imágenes, a numerosas funciones y a una gran capacidad para archivar datos en tiempo real. El dispositivo Sonoeye tienen una velocidad de respuesta asombrosa. El equipo también destaca por su sencillez de manejo: se enciende en pocos segundos, se pueden archivar datos de pacientes mientras el profesional visualiza los archivos de manera simultánea, se puede sumergir un metro durante treinta minutos y dispone de una sonda con funciones configurables, lo que convierte a este dispositivo en la mejor apuesta para aquellos profesionales de la salud que necesitan un ecógrafo premium y con capacidad portátil.   
                 </span>
