--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taichi Holdings Colombia</title>
+    <meta name="description" content="Compañia dedicada al comercio internacional, importamos equipos medicos para humanos, veterinarios de alta calidad y brindamos soluciones completas a las necesidades ">
+    <meta name="keywords" content="equipos medicos, ecografo, veterinaria, equipos medicos, tomografia, rayos x, resonancia magnética, ultrasonido veterinario, ecografo portatíl">
+    <title>Taichi Holdings Colombia - Inico</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -46,14 +48,14 @@
                         <li><a class="dropdown-item" href="./pages/simulacion.html">Simulación</a></li>
                         <li><a class="dropdown-item" href="./pages/soporte.html">Soporte técnico</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#contacto__link">Contacto</a></li>
+                        <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#noticias__link">NOTICIAS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto__link">CONTACTO</a>
+                        <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                     </li>
                     </ul>
                 </div>
