--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -59,7 +59,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid banner__producto" src="/img/bannerVet.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid banner__producto" src="../img/bannerVet.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Ecógrafo de Bolsillo SonoEye</p>
                     </div> 
                     </div>
@@ -73,16 +73,16 @@
                 <img src="/img/Sonoeye1.jpeg" width="100%" id="mainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="/img/VETproductos/SonoeyeVet.jpeg" width="100%" class="small-img" alt="">
+                    <img src="../img/VETproductos/SonoeyeVet.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="/img/VETproductos/Sonoeye2.jpeg" width="100%" class="small-img" alt="">
+                    <img src="../img/VETproductos/Sonoeye2.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="/img/VETproductos/Sonoeye3.jpeg" width="100%" class="small-img" alt="">
+                    <img src="../img/VETproductos/Sonoeye3.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="/img/VETproductos/sonoeye4.png" width="100%" class="small-img" alt="">
+                    <img src="../img/VETproductos/sonoeye4.png" width="100%" class="small-img" alt="">
                 </div>
             </div>
             </div>
@@ -102,22 +102,22 @@
             <div class="row">
                 <div class="col-lg iconos"> 
                     <p>Síguenos:</p>
-                    <img src="/img/facebook.png" alt="">
-                    <img src="/img/youtube.png" alt="">
-                    <img src="/img/instagram.png" alt="">
-                    <img src="/img/linkedin.png" alt="">
+                    <img src="../img/facebook.png" alt="">
+                    <img src="../img/youtube.png" alt="">
+                    <img src="../img/instagram.png" alt="">
+                    <img src="../img/linkedin.png" alt="">
                 </div>
                 <div class="col-lg iconos_uno"> 
                     <p>Datos de contacto:</p>
-                    <p><img src="/img/llamada-telefonica.png" alt="">
+                    <p><img src="../img/llamada-telefonica.png" alt="">
                     +57 601-7559348</p>
-                    <p><img src="/img/ubicacion.png" alt="">
+                    <p><img src="../img/ubicacion.png" alt="">
                         Cra. 15 No. 93A-62 OF: 304-305 Bogota - Colombia</p>
-                    <p><img src="/img/email.png" alt="">
+                    <p><img src="../img/email.png" alt="">
                         info@anabas.co.jp</p>
                 </div>
                 <div class="col-lg footer__logo"> 
-                    <img src="/img/logotaichi.png" width=300px alt="">
+                    <img src="../img/logotaichi.png" width=300px alt="">
                 </div>
             </div>
         </section>
