--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -59,7 +59,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid banner__producto" src="../img/bannerVet.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid banner__producto" src="./img/bannerVet.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Ecógrafo de Bolsillo SonoEye</p>
                     </div> 
                     </div>
@@ -73,7 +73,7 @@
                 <img src="/img/Sonoeye1.jpeg" width="100%" id="mainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="../img/VETproductos/SonoeyeVet.jpeg" width="100%" class="small-img" alt="">
+                    <img src="./img/VETproductos/SonoeyeVet.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
                     <img src="../img/VETproductos/Sonoeye2.jpeg" width="100%" class="small-img" alt="">
