--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -70,19 +70,19 @@
     <!--Carrusel de imagenes de producto-->
         <section id="prodetails" class="section-p1 row";>
             <div class="single-pro-image col-lg 6">
-                <img src="/img/Sonoeye1.jpeg" width="100%" id="mainImg" alt="">
+                <img src="./img/Sonoeye1.jpeg" width="100%" id="mainImg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
                     <img src="./img/VETproductos/SonoeyeVet.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="../img/VETproductos/Sonoeye2.jpeg" width="100%" class="small-img" alt="">
+                    <img src="./img/VETproductos/Sonoeye2.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="../img/VETproductos/Sonoeye3.jpeg" width="100%" class="small-img" alt="">
+                    <img src="./img/VETproductos/Sonoeye3.jpeg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="../img/VETproductos/sonoeye4.png" width="100%" class="small-img" alt="">
+                    <img src="./img/VETproductos/sonoeye4.png" width="100%" class="small-img" alt="">
                 </div>
             </div>
             </div>
