--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -102,10 +102,10 @@
             <div class="row">
                 <div class="col-lg iconos"> 
                     <p>Síguenos:</p>
-                    <img src="../img/facebook.png" alt="">
-                    <img src="../img/youtube.png" alt="">
-                    <img src="../img/instagram.png" alt="">
-                    <img src="../img/linkedin.png" alt="">
+                    <img src="./img/facebook.png" alt="">
+                    <img src="./img/youtube.png" alt="">
+                    <img src="./img/instagram.png" alt="">
+                    <img src="./img/linkedin.png" alt="">
                 </div>
                 <div class="col-lg iconos_uno"> 
                     <p>Datos de contacto:</p>
