--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -20,7 +20,7 @@
     <!--WHATSAPP-->
     <section>
         <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
-            <img class="iconoWp" src="/img/whatsapp.png" alt="">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
         </a>
     </section>
     <header>
@@ -59,7 +59,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid banner__producto" src="./img/bannerVet.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid banner__producto" src="/img/bannerVet.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Ecógrafo de Bolsillo SonoEye</p>
                     </div> 
                     </div>
