--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -29,7 +29,7 @@
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../img/logotaichi.png" width="200px" alt=""></a>
-                <a class="nav-link active" aria-current="page" href="/index.html"><img src="/img/homeicon.png" alt=""></a>
+                <a class="nav-link active" aria-current="page" href="/index.html"><img src="../img/homeicon.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -59,7 +59,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid banner__producto" src="/img/bannerVet.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid banner__producto" src="../img/bannerVet.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Ecógrafo de Bolsillo SonoEye</p>
                     </div> 
                     </div>
