--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
     <!--WHATSAPP-->
     <section>
         <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
-            <img class="iconoWp" src="/img/whatsapp.png" alt="">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
         </a>
     </section>
     <header>
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../img/logotaichi.png" width="200px" alt=""></a>
-                <a class="nav-link active" aria-current="page" href="/index.html"><img src="/img/homeicon.png" alt=""></a>
+                <a class="nav-link active" aria-current="page" href="/index.html"><img src="../img/homeicon.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -60,7 +60,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid banner__producto" src="/img/Banner taichi tokyo.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid banner__producto" src="../img/Banner taichi tokyo.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">¡ Contactanos !</p>
                     </div> 
                     </div>
