--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,22 +92,22 @@
             <div class="row">
                 <div class="col-lg iconos"> 
                     <p>Síguenos:</p>
-                    <img src="/img/facebook.png" alt="">
-                    <img src="/img/youtube.png" alt="">
-                    <img src="/img/instagram.png" alt="">
-                    <img src="/img/linkedin.png" alt="">
+                    <img src="../img/facebook.png" alt="">
+                    <img src="../img/youtube.png" alt="">
+                    <img src="../img/instagram.png" alt="">
+                    <img src="../img/linkedin.png" alt="">
                 </div>
                 <div class="col-lg iconos_uno"> 
                     <p>Datos de contacto:</p>
-                    <p><img src="/img/llamada-telefonica.png" alt="">
+                    <p><img src="../img/llamada-telefonica.png" alt="">
                     +57 601-7559348</p>
-                    <p><img src="/img/ubicacion.png" alt="">
+                    <p><img src="../img/ubicacion.png" alt="">
                         Cra. 15 No. 93A-62 OF: 304-305 - Bogota - Colombia</p>
-                    <p><img src="/img/email.png" alt="">
+                    <p><img src="../img/email.png" alt="">
                         info@anabas.co.jp</p>
                 </div>
                 <div class="col-lg footer__logo"> 
-                    <img src="/img/logotaichi.png" width=300px alt="">
+                    <img src="../img/logotaichi.png" width=300px alt="">
                 </div>
             </div>
         </section>
