--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../img/logotaichi.png" width="200px" alt=""></a>
-                <a class="nav-link active" aria-current="page" href="/index.html"><img src="../img/homeicon.png" alt=""></a>
+                <a class="nav-link active" aria-current="page" href="./index.html"><img src="../img/homeicon.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -43,11 +43,11 @@
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/pages/humano.html">Medicina Humana</a></li>
-                        <li><a class="dropdown-item" href="/pages/veterinario.html">Medicina Veterinaria</a></li>
-                        <li><a class="dropdown-item" href="/pages/odontologia.html">Odontología</a></li>
-                        <li><a class="dropdown-item" href="/pages/simulacion.html">Simulación</a></li>
-                        <li><a class="dropdown-item" href="/pages/soporte.html">Soporte técnico</a></li>
+                        <li><a class="dropdown-item" href="./pages/humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="./pages/veterinario.html">Medicina Veterinaria</a></li>
+                        <li><a class="dropdown-item" href="./pages/odontologia.html">Odontología</a></li>
+                        <li><a class="dropdown-item" href="./pages/simulacion.html">Simulación</a></li>
+                        <li><a class="dropdown-item" href="./pages/soporte.html">Soporte técnico</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
