--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../pages/humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="./humano.html">Medicina Humana</a></li>
                         <li><a class="dropdown-item" href="../pages/veterinario.html">Medicina Veterinaria</a></li>
                         <li><a class="dropdown-item" href="../pages/odontologia.html">Odontología</a></li>
                         <li><a class="dropdown-item" href="../pages/simulacion.html">Simulación</a></li>
