--- a/pages/veterinario.html
+++ b/pages/veterinario.html
@@ -98,7 +98,7 @@
             <div class="texto__vet col-lg  d-flex justify-content-center">
                 <div class="sub__texto col-lg ">
                     <h3>Los mejores equipos para diagnóstico veterinario</h3>
-                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
+                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Contamos con equipos médicos especializados para veterinaria en grandes y pequeños animales. Nuestros equipos cuentan con gran calidad y respaldo brindando soluciones no solo en su instalacion si no en la implementacion de proyectos de gran tamaño como lo son los centros de imagenes diagnósticas especializadas en medicina veterinaria.</p>  
                 </div>
             </div>
         </div>
