--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Compañia dedicada al comercio internacional, importamos equipos medicos para humanos, veterinarios de alta calidad y brindamos soluciones completas a las necesidades ">
     <meta name="keywords" content="equipos medicos, ecografo, veterinaria, equipos medicos, tomografia, rayos x, resonancia magnética, ultrasonido veterinario, ecografo portatíl">
-    <title>Taichi Holdings Colombia - Inico</title>
+    <title>Taichi Holdings Colombia | Inicio</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!--CSS-->
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="icon" href="./img/logotaichi.ico">
     
 </head>
 <body>
