--- a/pages/1vet.html
+++ b/pages/1vet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taichi Holdings Colombia</title>
+    <title>Taichi Holdings | SonoEye</title>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -50,7 +50,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto__link">CONTACTO</a>
+                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
                     </li>
                     </ul>
                 </div>
