--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taichi Holdings Colombia</title>
-    <meta name="description" content="Contacto, Nosotros, solicitud, equipos medicos, informacion, cotizaciones, servicio tecnico, biomedica">
+    <title>Taichi Holdings | Contacto</title>
+    <meta name="keywords" content="Contacto, Nosotros, solicitud, equipos medicos, informacion, cotizaciones, servicio tecnico, biomedica">
+    <meta name="description" content="Nuestro formulario de contacto, dejanos tus datos y solicitud y pronto te responderemos">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
     <!--JAVA BOOTSTRAP-->
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--CARRUSEL TEMA-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
     <!--WHATSAPP-->
@@ -69,7 +71,7 @@
         </div>
     </header>
     <!--FORMULARIO DE CONTACTO-->
-    <h4 class="titulos">Tus datos aqui</h4>
+    <h4 class="titulos">Formulario de contacto</h4>
     <section class="form-register">
         <div class="row">
             <div class="col formulario__contacto">
@@ -78,7 +80,7 @@
                 <input class="controls" type="email" name="correo" id="correo" placeholder="E-mail">
                 <input class="controls" type="text" name="ciudad" id="ciudad" placeholder="Ciudad">
                 <input class="controls" type="text" name="telefono" id="telefono" placeholder="Teléfono">
-                <h6>Comparte con nostoros mas detalles de tu solicitud:</h6>
+                <h6>Comparte con nosotros los detalles de tu solicitud:</h6>
                 <textarea name="formulario" id="formulario" cols="30" rows="10" style="width:100%; height:200px;"></textarea>
                 <p><input type="checkbox"> Estoy de acuerdo con los <a href="#">terminos y condiciones</a></p>
                 <input class="boton__enviar"type="submit">
