Final para entrega 3

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             </div>
         </div>
     <!--TEXTO Y CONTADOR-->
-    <section>
+    <h2 class="titulos">Taichi en el mundo</h2>
+    <section class="red__mundo">
         <div class="col-lg "> 
             <div class="row red__global">
                 <div class="col-lg 2 texto_globales">
